crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI056_PYI056.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI056.py:4:1: PYI056 (unsupported-method-call-on-all) Calling `.append()` on `__all__` may not be supported by all type checkers (use `+=` instead)
  |
3 | # Errors
4 | __all__.append("D")
  | ^^^^^^^^^^^^^^ PYI056 (unsupported-method-call-on-all)
5 | __all__.extend(["E", "Foo"])
6 | __all__.remove("A")
  |

PYI056.py:5:1: PYI056 (unsupported-method-call-on-all) Calling `.extend()` on `__all__` may not be supported by all type checkers (use `+=` instead)
  |
3 | # Errors
4 | __all__.append("D")
5 | __all__.extend(["E", "Foo"])
  | ^^^^^^^^^^^^^^ PYI056 (unsupported-method-call-on-all)
6 | __all__.remove("A")
  |

PYI056.py:6:1: PYI056 (unsupported-method-call-on-all) Calling `.remove()` on `__all__` may not be supported by all type checkers (use `+=` instead)
  |
4 | __all__.append("D")
5 | __all__.extend(["E", "Foo"])
6 | __all__.remove("A")
  | ^^^^^^^^^^^^^^ PYI056 (unsupported-method-call-on-all)
7 |
8 | # OK
  |
