crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI057_PYI057.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI057.pyi:4:20: PYI057 (byte-string-usage) Do not use `typing.ByteString`, which has unclear semantics and is deprecated
  |
2 | import collections.abc
3 | import foo
4 | from typing import ByteString
  |                    ^^^^^^^^^^ PYI057 (byte-string-usage)
5 | from collections.abc import ByteString
6 | from foo import ByteString
  |

PYI057.pyi:5:29: PYI057 (byte-string-usage) Do not use `collections.abc.ByteString`, which has unclear semantics and is deprecated
  |
3 | import foo
4 | from typing import ByteString
5 | from collections.abc import ByteString
  |                             ^^^^^^^^^^ PYI057 (byte-string-usage)
6 | from foo import ByteString
  |

PYI057.pyi:8:4: PYI057 (byte-string-usage) Do not use `typing.ByteString`, which has unclear semantics and is deprecated
   |
 6 | from foo import ByteString
 7 |
 8 | a: typing.ByteString
   |    ^^^^^^^^^^^^^^^^^ PYI057 (byte-string-usage)
 9 | b: collections.abc.ByteString
10 | c: foo.ByteString
   |

PYI057.pyi:9:4: PYI057 (byte-string-usage) Do not use `collections.abc.ByteString`, which has unclear semantics and is deprecated
   |
 8 | a: typing.ByteString
 9 | b: collections.abc.ByteString
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI057 (byte-string-usage)
10 | c: foo.ByteString
   |
